<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_article"
        android:icon="@drawable/baseline_article_24"
        android:title="@string/menu_article"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/baseline_help_24"
        android:title="@string/menu_help"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/menu_setting"
        app:showAsAction="always" />
    

</menu>