<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BantuanActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Topik"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="224dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagaimana1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.198" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagaimana2"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.475" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/bagaimana3"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="55dp"
            android:layout_height="51dp"
            android:layout_marginBottom="16dp"
            android:backgroundTintMode="add"
            android:contentDescription="@android:string/search_go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:srcCompat="@drawable/baseline_navigate_next_24" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="55dp"
            android:layout_height="51dp"
            android:layout_marginStart="52dp"
            android:backgroundTintMode="screen"
            android:contentDescription="@android:string/search_go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.092"
            app:srcCompat="@drawable/baseline_navigate_next_24" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="55dp"
            android:layout_height="51dp"
            android:backgroundTintMode="screen"
            android:contentDescription="@android:string/search_go"
            app:layout_constraintBottom_toTopOf="@+id/imageButton4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/baseline_navigate_next_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="413dp"
        android:layout_height="151dp"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/bantuan"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="299dp"
            android:layout_height="51dp"

            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6">

        </SearchView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="417dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BANTUAN"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="62dp"
            android:layout_height="78dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/describe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_navigate_before_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Konten utama tampilan (action menu) -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="407dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        app:menu="@menu/action_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>